// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds neither extra class when just alternate property is true 1`] = `
<li
  class="ListItem"
>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;

exports[`adds the active class when active property is true 1`] = `
<li
  class="ListItem active"
>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;

exports[`adds the alternate class when active and alternate properties are true 1`] = `
<li
  class="ListItem alternate"
>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;

exports[`renders the child I pass 1`] = `
<li
  class="ListItem"
>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;

exports[`renders without crashing 1`] = `
<li
  class="ListItem"
>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;

exports[`shows remove button when hovered 1`] = `
<ListItem
  remove={[Function]}
>
  <li
    className="ListItem"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="ListItem-Child"
    >
      asdf
    </span>
    <span
      className="ListItem-Remove"
    >
      <RemoveButton
        onClick={[Function]}
      >
        <button
          className="Remove-Button"
          onClick={[Function]}
        >
          <img
            alt="remove"
            className="redx"
            src="/img/red-x.svg"
          />
        </button>
      </RemoveButton>
    </span>
  </li>
</ListItem>
`;

exports[`shows the badge when alert is set 1`] = `
<li
  class="ListItem active"
>
  <div
    class="alert"
  >
    
  </div>
  <span
    class="ListItem-Child"
  >
    asdf
  </span>
</li>
`;
